After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729938 - Memory leak in webdav backend
Memory leak in webdav backend
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: webdav backend
1.21.x
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-10 23:25 UTC by Ross Lagerwall
Modified: 2014-05-24 15:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dav: Unref each GFileInfo after being added (769 bytes, patch)
2014-05-10 23:28 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2014-05-10 23:25:08 UTC
We currently leak the infos when enumerating.
Comment 1 Ross Lagerwall 2014-05-10 23:28:44 UTC
Created attachment 276305 [details] [review]
dav: Unref each GFileInfo after being added
Comment 2 Ondrej Holy 2014-05-22 15:46:10 UTC
Review of attachment 276305 [details] [review]:

Looks good, thanks!
Comment 3 Ross Lagerwall 2014-05-24 15:12:30 UTC
Pushed to master as f77fef6 and gnome-3-12 as 610f7a7. Thanks for the review!