dav: Unref each GFileInfo after being added

https://bugzilla.gnome.org/show_bug.cgi?id=729938